[gd_scene load_steps=7 format=3 uid="uid://bmyb2f8kjnksm"]

[ext_resource type="Script" path="res://scenes/moving_plataform.gd" id="1_dxfpx"]
[ext_resource type="Texture2D" uid="uid://ttkphstae1xu" path="res://assests/tilesets/new assets/Assets.png" id="2_l8p8s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ds6y"]
size = Vector2(46, 32)

[sub_resource type="Animation" id="Animation_doxw6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Assets:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8ijid"]
resource_name = "shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Assets:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.48, 0.56, 0.64, 0.72),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0), Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_erpdu"]
_data = {
"RESET": SubResource("Animation_doxw6"),
"shake": SubResource("Animation_8ijid")
}

[node name="platform" type="AnimatableBody2D"]
collision_layer = 2
script = ExtResource("1_dxfpx")

[node name="respawn_timer" type="Timer" parent="."]

[node name="Assets" type="Sprite2D" parent="."]
texture = ExtResource("2_l8p8s")
region_enabled = true
region_rect = Rect2(272, 0, 48, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1ds6y")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_erpdu")
}

[connection signal="timeout" from="respawn_timer" to="." method="_on_respawn_timer_timeout"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
